[31.October 2008]
- level music stops again when level is exitted (it was broken)
- monsters/snail.rb: fixed possible cause of "snail out of map" problem
- Meadow level: fixed position of snails
- trash.rb, bottompanel.rb, bottompanelstate.rb, inventory.rb, 
  inventoryview.rb, gfx/trash.rb: visual trash added (with possibility
  to put there items in the regular way either using keyboard or mouse)
- bomb.rb, testing level for Bomb: new game object - bomb (currently
  it just kills vikings and other sprites, in future it will also destroy
  walls)

[30.October 2008]
- bottompanel.rb, game.rb, gamestate.rb: Dragged item is shown during
  drag&drop item exchange
- initfv.rb: possibility to switch sound on/off from menu

[29.October 2008]
- transporter.rb, monsters/lift.rb: Fixed "lift down problem":
  Transporter#update_transported_sprites divided into two methods,
  because Transporters, which move transported sprites also in y-axis,
  have to move themselves between updating list of transported sprites
  and moving them in order to ensure that area to which transported sprites 
  are moved is already free at the time of the operation
- added testing level using Tiled map with tiles 32x32 px (works well without
  any additional modifications to SchwerEngine)

[28.October 2008]
- level Stairs to Hell: y coordinate of all objects fixed
- game.rb: fixed error at end of world (throw inside Thread caused 
           ThreadError);
           possibility to switch off threaded loading
- testing level using multiple tilesets-
  

[19.October 2008]
- levels SwitchPlace & Antarctic Visitors & Peaceful Meadow fixed
- gamestate.rb: added some keys to imitate LV2: INSERT uses item, Z and X
  switch characters, left shift uses viking's 'second ability'
- viking.rb: core of S/F key functions moved from GameState to Viking;
- viking.rb, transporter.rb: viking's rect expanded when looking for active
  objects to activate; Transporter's rect expanded when looking for sprites 