@@ -4,13 +4,14 @@
 # Map for testing of Bomb
 
 require 'bomb.rb'
+require 'wall.rb'
 
 TS = TILE_SIZE = 40
 IS = ITEM_SIZE = 40
 
 FLOOR = 11*TS
 
-
+# huge heap of bombs :)
 (8**2).times {|i|
   col = i % 8
   row = i / 8
@@ -20,3 +21,6 @@ FLOOR = 11*TS
 
   LOCATION << Bomb.new([x,y])
 }
+
+# wall
+LOCATION << Wall.new([1000, FLOOR-4*TS], 2, 4)
