@@ -1,3 +1,9 @@
+[1.November 2008]
+- bomb.rb: bomb only kills Heroes and Monsters, not all sprites;
+           fired bombs are forced to explode
+- wall.rb, bomb.rb, BombEtc testing level, gfx/brick*.tga: new game object - 
+  smashable wall
+
 [31.October 2008]
 - level music stops again when level is exitted (it was broken)
 - monsters/snail.rb: fixed possible cause of "snail out of map" problem
